--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gulp-js-import": "^1.0.6",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^3.0.0"
   },
   "dependencies": {}
 }
